# libcrpm

./: .gitignore  CMakeLists.txt  README.md
flush/: gf.c  gf.mod.c  testgf.c
instrumentation/: CMakeLists.txt  context.cpp  context.h  main.cpp  module.cpp  optimization.cpp  preprocessor.cpp
runtime/: CMakeLists.txt
runtime/include/: crpm.h  crpm_mpi.h
runtime/include/internal/: allocator.h  checkpoint.h  common.h  engine.h  filesystem.h  metadata.h  pptr.h
runtime/include/internal/allocators/: hook_lrmalloc_allocator.h  lrmalloc_allocator.h  lrmalloc_util.h  trivial_allocator.h
runtime/include/internal/engines/: dirtybit_engine.h  hybrid_inst_engine.h  lmc_engine.h  mprotect_engine.h  noop_engine.h  nvm_engine.h  nvm_inst_engine.h  undolog_engine.h
runtime/src/: allocator.cpp  checkpoint.cpp  common.cpp  crpm.cpp  crpm_mpi.cpp  engine.cpp  filesystem.cpp  lrmalloc_util.cpp  metadata.cpp
runtime/src/allocators/: hook_lrmalloc_allocator.cpp  lrmalloc_allocator.cpp
runtime/src/engines/: dirtybit_engine.cpp  hybrid_inst_engine.cpp  lmc_engine.cpp  mprotect_engine.cpp  nvm_engine.cpp  nvm_inst_engine.cpp  undolog_engine.cpp
scripts/: perf-test.sh  prepare-dataset.sh
tests/: CMakeLists.txt  bench.cpp  bench.h  main.cpp  workload_gen.cpp  workload_gen.h
tests/apps/: consistency_check.h  stl_map.h  stl_unordered_map.h
tests/mpi-apps/: README.md
tests/mpi-apps/CoMD-CRPM/: CoMD-mpi  CoMD.c  CoMD_info.h  Makefile  ljForce.c  ljForce.s  memUtils.h  mycommand.c  rank  runme.sh
tests/mpi-apps/HPCCG-CRPM/: HPCCG.cpp  HPCCG.hpp  Makefile  main.cpp  runme.sh
tests/mpi-apps/LULESH-CRPM/: Makefile  lulesh-init.cc  lulesh-util.cc  lulesh.cc  lulesh.h  rank  runme.sh
