cmake_minimum_required(VERSION 3.16)
set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
project(libcrpm)
set(CMAKE_CXX_STANDARD 14)
set(FULL_BUILD OFF)
message(STATUS "Performing full build, i.e., including other system: ${FULL_BUILD}")
if (DEFINED LEGACY_LINKER)
    add_compile_options(-g -O3 -march=native)
    add_link_options(-g -O3 -pthread -march=native -latomic)
else ()
    set(CMAKE_BUILD_TYPE Release)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
    add_compile_options(-g -O3 -march=native)
    add_link_options(-g -O3 -pthread -march=native -latomic)
endif ()
add_compile_options(-fheinous-gnu-extensions)
add_subdirectory(instrumentation)
add_subdirectory(runtime)
add_subdirectory(tests)
